@@ -35,10 +35,15 @@
 #include "cltypes.h"
 #include "clamav.h"
 #include "others.h"
+#include "upx.h"
 
 #define IMAGE_DOS_SIGNATURE	    0x5a4d	    /* MZ */
 #define IMAGE_NT_SIGNATURE	    0x00004550
 #define IMAGE_OPTIONAL_SIGNATURE    0x010b
+
+#define UPX_NRV2B "\x11\xc9\x75\x20\x41\x01\xdb\x75\x07\x8b\x1e\x83\xee\xfc\x11\xdb\x11\xc9\x01\xdb\x73\xef\x75\x09"
+#define UPX_NRV2D "\x8b\x1e\x83\xee\xfc\x11\xdb\x11\xc9\x01\xdb\x75\x07\x8b\x1e\x83\xee\xfc\x11\xdb\x11\xc9\x75\x20"
+#define UPX_NRV2E "\x83\xf0\xff\x74\x75\xd1\xf8\x89\xc5\xeb\x0b\x01\xdb\x75\x07\x8b\x1e\x83\xee\xfc\x11\xdb\x72\xcc"
 
 struct pe_image_file_hdr {
     uint32_t Magic;
@@ -109,7 +114,6 @@ struct pe_image_section_hdr {
     uint32_t Characteristics;
 };
 
-
 static uint32_t cli_rawaddr(uint32_t rva, struct pe_image_section_hdr *shp, uint16_t nos)
 {
 	int i, found = 0;
@@ -140,19 +144,19 @@ static int cli_ddump(int desc, int offset, int size, const char *file)
 
     if((pos = lseek(desc, 0, SEEK_CUR)) == -1) {
 	cli_dbgmsg("Invalid descriptor\n");
-	return -1;
+	return CL_EIO;
     }
 
     if(lseek(desc, offset, SEEK_SET) == -1) {
 	cli_dbgmsg("lseek() failed\n");
 	lseek(desc, pos, SEEK_SET);
-	return -1;
+	return CL_EIO;
     }
 
     if((ndesc = open(file, O_WRONLY|O_CREAT|O_TRUNC, S_IRWXU)) < 0) {
 	cli_dbgmsg("Can't create file %s\n", file);
 	lseek(desc, pos, SEEK_SET);
-	return -1;
+	return CL_EIO;
     }
 
     while((bread = read(desc, buff, FILEBUFF)) > 0) {
@@ -162,7 +166,7 @@ static int cli_ddump(int desc, int offset, int size, const char *file)
 		lseek(desc, pos, SEEK_SET);
 		close(ndesc);
 		unlink(file);
-		return -1;
+		return CL_EIO;
 	    }
 	    break;
 	} else {
@@ -171,7 +175,7 @@ static int cli_ddump(int desc, int offset, int size, const char *file)
 		lseek(desc, pos, SEEK_SET);
 		close(ndesc);
 		unlink(file);
-		return -1;
+		return CL_EIO;
 	    }
 	}
 	sum += bread;
@@ -191,8 +195,9 @@ int cli_scanpe(int desc, const char **virname, long int *scanned, const struct c
 	struct pe_image_optional_hdr optional_hdr;
 	struct pe_image_section_hdr *section_hdr;
 	struct stat sb;
-	char sname[9];
-	int i;
+	char sname[9], buff[24], *tempfile;
+	int i, found;
+	int (*upxfn)(char *, int , char *, int) = NULL;
 
 
     if(read(desc, &e_magic, sizeof(e_magic)) != sizeof(e_magic)) {
@@ -321,8 +326,9 @@ int cli_scanpe(int desc, const char **virname, long int *scanned, const struct c
 
 	if(read(desc, &section_hdr[i], sizeof(struct pe_image_section_hdr)) != sizeof(struct pe_image_section_hdr)) {
 	    cli_dbgmsg("Can't read section header\n");
+	    cli_warnmsg("Possibly broken PE file\n");
 	    free(section_hdr);
-	    return -1;
+	    return CL_CLEAN;
 	}
 
 	strncpy(sname, section_hdr[i].Name, 8);
@@ -364,7 +370,7 @@ int cli_scanpe(int desc, const char **virname, long int *scanned, const struct c
     if(fstat(desc, &sb) == -1) {
 	cli_dbgmsg("fstat failed\n");
 	free(section_hdr);
-	return -1;
+	return CL_EIO;
     }
 
     ep = cli_rawaddr(optional_hdr.AddressOfEntryPoint, section_hdr, file_hdr.NumberOfSections);
@@ -372,13 +378,114 @@ int cli_scanpe(int desc, const char **virname, long int *scanned, const struct c
     if(section_hdr[i].PointerToRawData + section_hdr[i].SizeOfRawData > sb.st_size || ep == -1) {
 	cli_warnmsg("Possibly broken PE file\n");
 	free(section_hdr);
-	return -1;
+	return CL_CLEAN;
     }
 
-    cli_dbgmsg("EntryPoint: 0x%x (%d)\n", ep, ep);
+    cli_dbgmsg("EntryPoint offset: 0x%x (%d)\n", ep, ep);
+
+    if(lseek(desc, ep + 0x78, SEEK_SET) == -1) {
+	cli_dbgmsg("lseek() failed\n");
+	free(section_hdr);
+	return CL_EIO;
+    }
+
+    if(read(desc, buff, 24) != 24) {
+	cli_dbgmsg("Can't read 24 bytes at 0x%x (%d)\n", ep + 0x78, ep + 0x78);
+    } else {
+	if(!memcmp(buff, UPX_NRV2B, 24)) {
+	    cli_dbgmsg("UPX: NRV2B decompressor detected\n");
+	    upxfn = upx_inflate2b;
+	} else if(!memcmp(buff, UPX_NRV2D, 24)) {
+	    cli_dbgmsg("UPX: NRV2D decompressor detected\n");
+	    upxfn = upx_inflate2d;
+	} else if(!memcmp(buff, UPX_NRV2E, 24)) {
+            cli_dbgmsg("UPX: NRV2E decompressor detected\n");
+	    upxfn = upx_inflate2e;
+	}
+    }
+
+    if(upxfn) {
+	/* try to find the first section with physical size == 0 */
+	found = 0;
+	for(i = 0; i < file_hdr.NumberOfSections; i++) {
+	    if(!section_hdr[i].SizeOfRawData) {
+		found = 1;
+		break;
+	    }
+	}
+
+	if(found) {
+		uint32_t ssize, dsize;
+		char *src, *dest;
+
+	    /* we assume (i + 1) is UPX1 */
+	    if(strncmp(section_hdr[i].Name, "UPX0", 4) || strncmp(section_hdr[i + 1].Name, "UPX1", 4))
+		cli_dbgmsg("Possibly hacked UPX section headers\n");
+
+	    /* FIXME: use file operations in case of big files */
+	    ssize = section_hdr[i + 1].SizeOfRawData;
+	    dsize = section_hdr[i].VirtualSize + section_hdr[i + 1].VirtualSize;
+	    if((src = (char *) malloc(ssize)) == NULL) {
+		free(section_hdr);
+		return CL_EMEM;
+	    }
+
+	    if((dest = (char *) malloc(dsize)) == NULL) {
+		free(section_hdr);
+		free(src);
+		return CL_EMEM;
+	    }
+
+	    lseek(desc, section_hdr[i + 1].PointerToRawData, SEEK_SET);
+	    if(read(desc, src, ssize) != ssize) {
+		cli_dbgmsg("Can't read raw data of section %d\n", i + 1);
+		free(section_hdr);
+		free(src);
+		free(dest);
+		return CL_EMEM;
+	    }
+
+	    if(upxfn(src, ssize, dest, dsize)) {
+		cli_dbg("UPX decompression failed\n");
+	    } else {
+		    int ndesc;
+
+		tempfile = cl_gentemp(NULL);
+
+		if((ndesc = open(tempfile, O_WRONLY|O_CREAT|O_TRUNC, S_IRWXU)) < 0) {
+		    cli_dbgmsg("Can't create file %s\n", tempfile);
+		    free(section_hdr);
+		    free(src);
+		    free(dest);
+		    return CL_EIO;
+		}
+
+		if(write(ndesc, dest, dsize) != dsize) {
+		    cli_dbgmsg("Can't write %d bytes\n", dsize);
+		    free(section_hdr);
+		    free(src);
+		    free(dest);
+		    return CL_EIO;
+		}
+
+		close(ndesc);
+
+		/* TODO: scan and unlink file */
+
+		/* unlink(tempfile); */
+		free(tempfile);
+	    }
+
+	    free(src);
+	    free(dest);
+
+	} else {
+	    cli_dbgmsg("UPX sections not found\n");
+	}
+    }
 
     /* to be continued ... */
 
     free(section_hdr);
-    return 0;
+    return CL_CLEAN;
 }
